--- a/Test02/Views/KinhDoanh/ChinhSuaDH.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaDH.cshtml
@@ -34,7 +34,7 @@
                             <option selected="@Model.TrangThai">@Model.TrangThai</option>
                             <option>Chưa xét duyệt</option>
                             <option>Đã xét duyệt</option>
-                            <option>Delayed</option>
+                            <option>Đã xử lý</option>
                         </select>
                         @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
                     </div>
