--- a/Test02/Views/KeToan/TaoCongno.cshtml
+++ b/Test02/Views/KeToan/TaoCongno.cshtml
@@ -1,49 +1,62 @@
 ﻿@model Test02.Models.DonHang
+@using Test02.Models;
 
 @{
     ViewBag.Title = "TaoCongno";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    List<DonHang> dh = db.DonHangs.ToList();
 }
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
-          
 
 
-                @using (Html.BeginForm())
-                {
-                    @Html.AntiForgeryToken()
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
 
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                 <p> <strong>Mã đại lý: </strong>@Html.DisplayFor(model => model.MaDL)</p>
+                @{
+                    var tendl = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
+                }
+                <p><strong>Tên đại lý:</strong> @Html.DisplayFor(model => tendl.TenDL)</p>
+                <p><strong>Địa chỉ:</strong> @Html.DisplayFor(model => tendl.DiaChi)</p>
+                <p>
+                    <strong>Loại đại lý:</strong> @{
+                        var loai = db.LoaiDLs.Where(s => s.MaLoaiDL == tendl.MaLoaiDL).FirstOrDefault();
+                    }@Html.DisplayFor(model => loai.TenDaiLy)
+                </p>
 
-                @*<p><strong>Mã đại lý:</strong> @Html.DisplayFor(model => model.MaDL)</p>*@
+                @{
+                    int count = 0;
+                    for (int i = 0; i < dh.Count; i++)
+                    {
 
-                @*@{
-            var tendl = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
-        }*@
-                <p><strong>Tên đại lý:</strong> @Html.DisplayFor(model => model.MaDL)</p>
-
-
-               
-
-                
-
+                        if ((dh[i].TinhTrangThanhToan == "Chưa thanh toán") && Model.MaDH == dh[i].MaDH)
+                        {
+                            count = (int)(count + dh[i].TongTien);
+                        }
+                    }
+                }
+                <p><strong>Tiền nợ:</strong> @Html.DisplayFor(model => count)</p>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Thêm phiếu" class="btn btn-default" />
                     </div>
                 </div>
             </div>
-                }
+            }
 
-                <div>
-                    @Html.ActionLink("Quay lại danh sách công nợ", "QLCongno")
-                </div>
-        
+            <div>
+                @Html.ActionLink("Quay lại danh sách đại lý", "DSDaily")
+            </div>
+
         </div>
     </div>
 </div>
